--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-<!-- Container for the entire page -->
 <div class="container mt-4">
 
-   <!-- Header with Tab Navigation and Refresh Buttons -->
 <header class="mb-4">
     <nav>
         <ul class="nav nav-tabs">
@@ -21,6 +19,7 @@
             <li class="nav-item"><a class="nav-link" href="/tab3/">Service Items</a></li>
             <li class="nav-item"><a class="nav-link" href="/tab4/">Full Inventory</a></li>
             <li class="nav-item"><a class="nav-link" href="/tab5/">Laundry Contracts</a></li>
+            <li class="nav-item"><a class="nav-link" href="/tab6/">Resale Items</a></li>
         </ul>
     </nav>
     <div class="mt-2">
@@ -33,7 +32,6 @@
     </div>
 </header>
 
-    <!-- Main content block for each page -->
     {% block content %}
     {% endblock %}
 
@@ -41,7 +39,7 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'923980a84be9bfcc',t:'MTc0MjUxODcyMy4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
 
 
