--- a/app/templates/tab5.html
+++ b/app/templates/tab5.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Laundry Inventory</h1>
+<h1>Open Laundry Contracts</h1>
 
 <!-- Filter inputs with URL submission -->
 <form method="GET" class="mb-3 row g-2">
