--- a/app/templates/tab6.html
+++ b/app/templates/tab6.html
@@ -14,11 +14,8 @@
   <div class="col-12 col-md-2">
     <input type="text" class="form-control" name="last_contract_num" placeholder="Filter Last Contract" value="{{ filter_last_contract }}" />
   </div>
-  <div class="col-12 col-md-2">
-    <input type="text" class="form-control" name="status" placeholder="Filter Status" value="{{ filter_status }}" />
-  </div>
-  <div class="col-12 col-md-2">
-    <input type="text" class="form-control" name="rental_class_num" placeholder="Filter Rental Class (e.g., 999)" value="{{ filter_rental_class_num }}" />
+   <div class="col-12 col-md-2">
+    <input type="text" class="form-control" name="rental_class_num" placeholder="Filter Rental Class (54321)" value="{{ filter_rental_class_num }}" />
   </div>
   <div class="col-12 col-md-2">
     <button type="submit" class="btn btn-primary">Apply Filters</button>
