--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>RFID Inventory !!TEST!! Dashboard</h1>
+<h1 style="text-align: center;"></h1>>RFID Inventory !!TEST!! Dashboard</h1>
 <p style="text-align: center;"><strong>Welcome to the RFID Inventory Testing Dashboard. </strong></p>
 <p style="text-align: center;">Use the tabs above to view detailed information, or click "WARNING SERVER REBOOT" to update data immediately.</p>
 <p style="text-align: center;">THIS SERVER WILL HAVE NEWEST FEATURES.</p>
