--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,54 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>RFID Inventory Dashboard</h1>
-<p>Welcome to the RFID Inventory Dashboard. Use the tabs above to view detailed information, or click "Refresh Now" to update data immediately.</p>
-{% endblock %}
-
+<h1 style="text-align: center;"></h1>>RFID Inventory !!TEST!! Dashboard</h1>
+<p style="text-align: center;"><strong>Welcome to the RFID Inventory Testing Dashboard. </strong></p>
+<p style="text-align: center;">Use the tabs above to view detailed information, or click "WARNING SERVER REBOOT" to update data immediately.</p>
+<p style="text-align: center;">THIS SERVER WILL HAVE NEWEST FEATURES.</p>
+<h3 style="padding-left: 240px;"><strong>Scanable Items- </strong></h3>
+<ul>
+<li style="list-style-type: none;">
+<ul>
+<li style="list-style-type: none;">
+<ul>
+<li style="list-style-type: none;">
+<ul>
+<li style="list-style-type: none;">
+<ul>
+<li style="list-style-type: none;">
+<ul>
+<li style="list-style-type: none;">
+<ul>
+<li>
+<h3><strong>All Linens(except Spandex, Napkins, Runners, and Sashes)</strong></h3>
+</li>
+<li>
+<h3><strong> All Resale</strong></h3>
+</li>
+<li>
+<h3><strong> All AV and Concession</strong></h3>
+</li>
+<li>
+<h3><strong> All Tent Tops</strong></h3>
+</li>
+<li>
+<h3><strong> Garden Chairs</strong></h3>
+</li>
+<li>
+<h3><strong> Cocktail Tbl Tops &amp; Legs</strong></h3>
+</li>
+<li>
+<h3><strong> Carpet Runners</strong></h3>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>{% endblock %}
