--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 style="text-align: center;"></h1>>RFID Inventory !!TEST!! Dashboard</h1>
-<p style="text-align: center;"><strong>Welcome to the RFID Inventory Testing Dashboard. </strong></p>
-<p style="text-align: center;">Use the tabs above to view detailed information, or click "WARNING SERVER REBOOT" to update data immediately.</p>
-<p style="text-align: center;">THIS SERVER WILL HAVE NEWEST FEATURES.</p>
+<h1 style="text-align: center;"></h1>>BT&E RFID Inventory Dashboard</h1>
+<p style="text-align: center;"><strong>Welcome to the BT&E RFID DASHBOARD. </strong></p>
+<p style="text-align: center;">Use the tabs above to view detailed information, or click "REFRESH DATA" to update data immediately.</p>
+<p style="text-align: center;">THIS SERVER WILL MOST STABLE.</p>
 <h3 style="padding-left: 240px;"><strong>Scanable Items- </strong></h3>
 <ul>
 <li style="list-style-type: none;">
